--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@hunghg255/eslint-config-react": "^0.0.16",
     "@total-typescript/ts-reset": "^0.4.2",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "^20.2.3",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
