--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: 🔂 Surge PR Preview 2
 
 on:
-  push:
+  pull_request:
     branches:
       - master
 
@@ -20,26 +20,13 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18.x
-
-      - name: Notification Failure
-        if: failure()
-        uses: hunghg255/action-notifications@master
+      - uses: hunghg255/surge-preview@master
+        id: preview_step
         with:
-          discord_webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          qrcode: https://hung.thedev.id
-          title: "Deploy to Dev"
-          description: "Test here: https://hung.thedev.id"
-
-  notifification:
-    needs: preview
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Notification Success
-        uses: hunghg255/action-notifications@master
-        if: always()
-        with:
-          discord_webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          title: "Deploy to Dev"
-          qrcode: https://hung.thedev.id
-          description: "Test here: https://hung.thedev.id"
+          surge_token: ${{ secrets.SURGE_TOKEN }}
+          dist: public
+          build: |
+            npm install
+            npm run build
+      - name: Get the preview_url
+        run: echo "url => ${{ steps.preview_step.outputs.preview_url }}"
