--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "dom-to-images": "^0.0.1",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "rc-field-form": "^1.33.0",
     "rc-select": "^14.5.2",
     "react": "^18.2.0",
