--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "analyze": "npm run lint && tsc && vite build --mode=analyze && source-map-explorer 'dist/assets/*.js'"
   },
   "dependencies": {
-    "dom-to-images": "^0.0.3",
+    "@progress/kendo-drawing": "^1.20.1",
     "rc-field-form": "^1.33.0",
     "rc-select": "^14.5.2",
     "react": "^18.2.0",
